[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Block45.gd" type="Script" id=1]
[ext_resource path="res://Texturs/kek3.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 256, 304, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 112, 304, 32, 32 )

[node name="StaticBody2D" type="KinematicBody2D"]
position = Vector2( 8.97874, 0 )
collision_mask = 11
script = ExtResource( 1 )

[node name="Up_left" type="Area2D" parent="."]

[node name="Sprite" type="Sprite" parent="Up_left"]
position = Vector2( -24.9963, -9.94237 )
scale = Vector2( 1, 1.13956 )
texture = SubResource( 1 )

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="Up_left"]
position = Vector2( -47.8407, -11.3081 )
polygon = PoolVector2Array( 6.8, 11.143, 6.8, 1.693, 38.75, -20.182, 38.8005, -8.47242 )

[node name="Down_left" type="Area2D" parent="."]

[node name="Sprite" type="Sprite" parent="Down_left"]
position = Vector2( -24.6853, 14.7825 )
scale = Vector2( 1.01944, 0.975526 )
texture = SubResource( 2 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Down_left"]
position = Vector2( 4.91555, -3.30968 )
polygon = PoolVector2Array( -46, 3, -46, 12.5, -14, 28, -14, 17.5 )

[node name="Up_Right" type="Area2D" parent="."]

[node name="Sprite2" type="Sprite" parent="Up_Right"]
position = Vector2( 6.85652, -10.4213 )
scale = Vector2( 1, 1.19118 )
texture = SubResource( 1 )
flip_h = true

[node name="CollisionPolygon2D5" type="CollisionPolygon2D" parent="Up_Right"]
position = Vector2( -33.7948, -61.8667 )
rotation = 0.00129596
polygon = PoolVector2Array( 24.5, 30, 25, 42, 55.5, 61, 56, 48 )

[node name="Down_right" type="Area2D" parent="."]

[node name="Sprite2" type="Sprite" parent="Down_right"]
position = Vector2( 6.79599, 14.7825 )
scale = Vector2( 0.977636, 0.975526 )
texture = SubResource( 2 )
flip_h = true

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="Down_right"]
position = Vector2( -13.9384, 2.92247 )
polygon = PoolVector2Array( 5, 12, 5, 21.5, 36, 6, 36, -4 )

[node name="Up_left_colision" type="CollisionPolygon2D" parent="."]
position = Vector2( 29.4803, 92.3974 )
polygon = PoolVector2Array( -70.3965, -92.5849, -38.459, -92.3974, -38.459, -112.272 )

[node name="Up_Right_colision" type="CollisionPolygon2D" parent="."]
position = Vector2( 29.4803, 92.3974 )
polygon = PoolVector2Array( -38.5215, -112.397, -38.459, -92.3349, -7.20904, -92.5849 )

[node name="Down_left_colision" type="CollisionPolygon2D" parent="."]
position = Vector2( 29.4803, 92.3974 )
polygon = PoolVector2Array( -70.1155, -92.6609, -38.3979, -92.396, -38.4641, -77.4973 )

[node name="Down_Right_colision" type="CollisionPolygon2D" parent="."]
position = Vector2( 29.4803, 92.3974 )
polygon = PoolVector2Array( -38.4641, -77.696, -7.20992, -92.3298, -38.5303, -92.2636 )

[connection signal="area_entered" from="Up_left" to="." method="_on_Up_left_area_entered"]
[connection signal="area_entered" from="Down_left" to="." method="_on_Down_left_area_entered"]
[connection signal="area_entered" from="Up_Right" to="." method="_on_Up_Right_area_entered"]
[connection signal="area_entered" from="Down_right" to="." method="_on_Down_right_area_entered"]
